--- a/css/main.css
+++ b/css/main.css
@@ -340,3 +340,29 @@ a.rotate-box-1:hover, a.rotate-box-2:hover {
         display:none}}
         
         
+        .header .navFixed {
+     
+            z-index: 10;         
+              position: fixed;      
+              top: 0;
+              left: 0;
+              margin-top: 0;
+              min-width: 100%;
+              /* opacity: 0.94; */
+              transition: opacity .5s ease-out; 
+             background: #caa488; 
+         
+                
+            }
+         
+            .navFixed #logoo1{
+         display: inline-block !important;
+            }
+         
+         
+         
+            #logoo1 {
+             display: none !important;
+         }
+         
+         
