--- a/css/test2020.css
+++ b/css/test2020.css
@@ -72,3 +72,10 @@ display: none;
         font-size: 20px;
     }    
 }
+
+
+@media only screen and (max-width: 767px) {
+.mask-info__link h3{
+    font-size: 15px;
+}
+}
